# ARCh-Kanga

./: .dockerignore  .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: main-source-branch-check.yml  repo-check.yml
basestation/: CAMERAS.md  README.md  REDESIGN_PLAN.md  docker-entrypoint.bash
basestation/arm_fastapi_app/: main.py
basestation/django_app/: main.py
basestation/fastapi_server/: main.py
basestation/frontend/: index.html
docker/: Dockerfile.basestation-frontend  Dockerfile.basestation-python  Dockerfile.dev  apt-packages.txt  compose.basestation.yaml  compose.can-test.yaml  compose.dev.yaml
docs/architecture/: README.md
docs/install/: basestation.md  can.md  docker.md  jetson_rebuild_log.md
docs/migration/: README.md  basestation.md  core_drive.md
scripts/: basestation_down.bash  basestation_up.bash  build_workspace.bash  check_can.bash  check_devices.bash  docker_shell.bash  setup_can.bash
src/: README.md
src/kanga_auto/: README.md
src/kanga_auto/kanga_cube_detection/: CMakeLists.txt  README.md  package.xml
src/kanga_auto/kanga_nav2/: CMakeLists.txt  README.md  package.xml
src/kanga_auto/kanga_placard_detection/: CMakeLists.txt  README.md  package.xml
src/kanga_auto/kanga_slam/: CMakeLists.txt  README.md  package.xml
src/kanga_bringup/: CMakeLists.txt  README.md  package.xml
src/kanga_cameras/: CMakeLists.txt  README.md
src/kanga_core/: README.md
src/kanga_core/kanga_core_battery/: CMakeLists.txt  README.md  package.xml
src/kanga_core/kanga_core_bringup/: CMakeLists.txt  README.md  package.xml
src/kanga_core/kanga_core_controller/: CMakeLists.txt  README.md  package.xml
src/kanga_core/kanga_core_controller/config/: controller.yaml
src/kanga_core/kanga_core_controller/include/kanga_core_controller/: kinematics.hpp  wheel_command_mapper.hpp
src/kanga_core/kanga_core_controller/launch/: controller.launch.py
src/kanga_core/kanga_core_controller/src/: kinematics.cpp  wheel_command_mapper.cpp  wheel_command_mapper_main.cpp
src/kanga_core/kanga_core_controller/test/: test_kinematics.cpp
src/kanga_core/kanga_core_description/: CMakeLists.txt  README.md  package.xml
src/kanga_core/kanga_core_drive/: CMakeLists.txt  README.md  package.xml
src/kanga_core/kanga_core_drive/config/: wheels.yaml
src/kanga_core/kanga_core_drive/config/motors/: shared_motor_config.py  wheel_bl_motor_config.py  wheel_br_motor_config.py  wheel_fl_motor_config.py  wheel_fr_motor_config.py
src/kanga_core/kanga_core_drive/include/kanga_core_drive/: drive_manager.hpp  wheel_joint_state_publisher.hpp
src/kanga_core/kanga_core_drive/launch/: drive.launch.py  wheels.launch.py
src/kanga_core/kanga_core_drive/scripts/: commission_wheels.py  config_merge.py
src/kanga_core/kanga_core_drive/src/: drive_manager.cpp  drive_manager_main.cpp  wheel_joint_state_publisher.cpp  wheel_joint_state_publisher_main.cpp
src/kanga_core/kanga_core_drive/test/: test_config_merge.py
src/kanga_core/kanga_core_microcontroller/: CMakeLists.txt  README.md  package.xml
src/kanga_core/kanga_core_simulation/: CMakeLists.txt  README.md  package.xml
src/kanga_description/: CMakeLists.txt  README.md  package.xml
src/kanga_drive/: CMakeLists.txt  README.md  package.xml
src/kanga_excavator/: README.md
src/kanga_excavator/kanga_excavator_bringup/: CMakeLists.txt  README.md  package.xml
src/kanga_excavator/kanga_excavator_controller/: CMakeLists.txt  README.md  package.xml
src/kanga_excavator/kanga_excavator_description/: CMakeLists.txt  README.md  package.xml
src/kanga_excavator/kanga_excavator_microcontroller/: CMakeLists.txt  README.md  package.xml
src/kanga_excavator/kanga_excavator_simulation/: CMakeLists.txt  README.md  package.xml
src/kanga_excavator/kanga_excavator_utils/: README.md
src/kanga_hardware/: README.md
src/kanga_hardware/kanga_battery/: CMakeLists.txt  README.md  package.xml
src/kanga_hardware/kanga_cameras/: README.md  package.xml
src/kanga_hardware/kanga_core/: CMakeLists.txt  README.md  package.xml
src/kanga_hardware/kanga_microcontroller/: CMakeLists.txt  README.md  package.xml
src/kanga_hardware/kanga_odrive/: CMakeLists.txt  README.md  package.xml
src/kanga_interfaces/: CMakeLists.txt  README.md  package.xml
src/kanga_interfaces/msg/: BatteryInfo.msg  BmsStatus.msg
src/kanga_manipulator/: README.md
src/kanga_manipulator/kanga_manipulator_bringup/: CMakeLists.txt  README.md  package.xml
src/kanga_manipulator/kanga_manipulator_controller/: CMakeLists.txt  README.md  package.xml
src/kanga_manipulator/kanga_manipulator_description/: CMakeLists.txt  README.md  package.xml
src/kanga_manipulator/kanga_manipulator_microcontroller/: CMakeLists.txt  README.md  package.xml
src/kanga_manipulator/kanga_manipulator_simulation/: CMakeLists.txt  README.md  package.xml
src/kanga_manipulator/kanga_manipulator_utils/: README.md
src/kanga_rviz/: CMakeLists.txt  README.md  package.xml
src/kanga_science/: README.md
src/kanga_science/kanga_science_bringup/: CMakeLists.txt  README.md  package.xml
src/kanga_science/kanga_science_controller/: CMakeLists.txt  README.md  package.xml
src/kanga_science/kanga_science_description/: CMakeLists.txt  README.md  package.xml
src/kanga_science/kanga_science_microcontroller/: CMakeLists.txt  README.md  package.xml
src/kanga_science/kanga_science_simulation/: CMakeLists.txt  README.md  package.xml
src/kanga_science/kanga_science_utils/: README.md
src/kanga_sim/: CMakeLists.txt  README.md  package.xml
src/kanga_util/: README.md
src/kanga_whs/: CMakeLists.txt  README.md  package.xml
(+10 files in other folders)
