<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kanga_science_microcontroller</name>
  <version>0.0.0</version>
  <description>Firmware and communication protocol for the Kanga science payload microcontroller</description>
  <maintainer email="uow-tronsoc@users.noreply.github.com">UOW TronSoc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
